--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
      <section>
         <div class="container">
             <div class="left">
-                <h4 style="color: whitesmoke;">15 Days</h4>
-                <h1><span class="orange">Internship</span><span class="black">Program</span></h1>
-                <h4 style="color: whitesmoke;">for collage student</h4> <br>
+                <div class="left-content">
+                    <h4 style="color: whitesmoke;">15 Days</h4>
+                    <h1><span class="orange">Internship</span><span class="black">Program</span></h1>
+                    <h4 style="color: whitesmoke;">for collage student</h4>
+                </div>
                 <div class="container-icon">
                     <i class="fa-brands fa-java color1" style="color: whitesmoke;font-size: 40px;"></i>
                     <p>Java</p>
@@ -63,7 +65,7 @@
             </div>
             <div class="right">
                 <div class="Rgcard">
-                    <h4 style="text-align: center; font-size: large; color: rgb(255, 165, 0); margin: 0;padding: 0;">RESERVE YOUR SPOT</h4> <br>
+                    <h4 style="text-align: center; font-size: large; color: rgb(255, 165, 0);">RESERVE YOUR SPOT</h4> <br>
                     <div class="input">
                         <input id="in1" type="text" placeholder="Name"/>
                         <input id="in2" type="text" placeholder="Phone"/>
